depends on react-spectrum

--- a/src/eelsystemd/web/package.json
+++ b/src/eelsystemd/web/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@adobe/react-spectrum": "^3.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
