--- a/src/eelsystemd/web/package.json
+++ b/src/eelsystemd/web/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@parcel/validator-typescript": "^2.8.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "parcel": "^2.8.0",
